# FDKAACTest

./: README.md  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/fdkaactest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: fdkcodec.cpp  fdkcodec.h  native-lib.cpp
app/src/main/java/com/example/fdkaactest/: AudioRecordTask.java  AudioTrackTast.java  MainActivity.java
app/src/main/java/com/example/fdkaactest/fdkaac/: FDKCodec.java  NativeTest.java
app/src/main/java/com/example/fdkaactest/utils/: ByteUtil.java  FileUtil.java  SDCardUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/fdkaactest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
